update with plugins

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,15 +5,19 @@ services:
     container_name: mc
     ports:
       - "25565:25565"
+      - "25575:25575"
     environment:
       EULA: "TRUE"
-      TYPE: "PAPER"
-      VERSION: "LATEST"
+      TYPE: "CUSTOM"
+      CUSTOM_SERVER: "paper-1.21.8-60.jar"
+      DOWNLOAD_URL: "https://fill-data.papermc.io/v1/objects/8de7c52c3b02403503d16fac58003f1efef7dd7a0256786843927fa92ee57f1e/paper-1.21.8-60.jar"
       ONLINE_MODE: "TRUE"
-      MEMORY: "4G"
+      MEMORY: "6G"
       ENABLE_RCON: "true"
       RCON_PASSWORD: "${RCON_PASSWORD}"
       RCON_PORT: "25575"
+      USE_AIKAR_FLAGS: "true"
     volumes:
       - ./server/data:/data
+      - ./server/properties/server.properties:/data/server.properties
     restart: unless-stopped
