--- a/plugins/lobby/pom.xml
+++ b/plugins/lobby/pom.xml
@@ -4,20 +4,17 @@
   <artifactId>lobby</artifactId>
   <version>1.0.0</version>
   <name>Lobby</name>
-
   <properties>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
   <repositories>
     <repository>
       <id>papermc</id>
       <url>https://repo.papermc.io/repository/maven-public/</url>
     </repository>
   </repositories>
-
   <dependencies>
     <dependency>
       <groupId>io.papermc.paper</groupId>
@@ -26,7 +23,6 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-
   <build>
     <plugins>
       <plugin>
@@ -36,9 +32,7 @@
         <executions>
           <execution>
             <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
+            <goals><goal>shade</goal></goals>
           </execution>
         </executions>
       </plugin>
